--- a/ghost/compose.yaml
+++ b/ghost/compose.yaml
@@ -2,10 +2,10 @@ version: '3.1'
 
 services:
   ghost:
-    image: arm64v8/ghost
+    image: ghost:latest
     restart: always
     ports:
-      - 8082:2368
+      - 3001:2368
     environment:
       # see https://ghost.org/dos/config/#configuration-options
       database__client: mysql
@@ -15,7 +15,7 @@ services:
       database__connection__database: ghost
 
       # change me
-      url: http://localhost:8080
+      url: http://localhost:3001
       # NODE_ENV: development
   db:
     image: arm64v8/mysql:8-oracle
