--- a/nginx-proxy-manager/compose.yaml
+++ b/nginx-proxy-manager/compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: 'docker.io/jc21/nginx-proxy-manager:latest'
+    image: 'jc21/nginx-proxy-manager:2.11.3'
     restart: unless-stopped
     ports:
       - '10080:80'
