--- a/mqtt/Dockerfile
+++ b/mqtt/Dockerfile
@@ -7,23 +7,27 @@ RUN apt-get update && \
     build-essential \
     cmake \
     git \
-    qt5-default \
-    libqt5core5a \
-    libqt5gui5 \
-    libqt5widgets5 \
+    wget \
     python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
+# Qt4 ソースのダウンロードとビルド
+RUN wget https://download.qt.io/archive/qt/4.8/4.8.7/qt-everywhere-opensource-src-4.8.7.tar.gz && \
+    tar xzf qt-everywhere-opensource-src-4.8.7.tar.gz && \
+    cd qt-everywhere-opensource-src-4.8.7 && \
+    ./configure -opensource -confirm-license && \
+    make -j$(nproc) && \
+    make install
 
 # RTIMU ライブラリのインストール
-RUN git clone https://github.com/RPi-Distro/RTIMULib.git /opt/RTIMULib || echo "Failed to clone RTIMULib repository" && \
-    cd /opt/RTIMULib/Linux && \
+RUN git clone https://github.com/RPi-Distro/RTIMULib.git /opt/RTIMULib && \
+    cd /opt/RTIMULib && \
     mkdir build && \
     cd build && \
     cmake .. && \
-    make -j4 && \
-    sudo make install && \
-    sudo ldconfig
+    make -j$(nproc) && \
+    make install && \
+    ldconfig
 
 # Pythonライブラリのインストール
 COPY requirements.txt .
@@ -40,3 +44,4 @@ WORKDIR /app
 
 # エントリーポイントの設定
 CMD ["python", "mqtt_sensehat_publisher.py"]
+
